--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "observer": "parcel ./example/observer/index.html",
-    "vdom": "parcel ./example/vdom/index.html"
+    "vdom": "parcel ./example/vdom/index.html",
+    "parseHtml": "parcel ./example/parseHtml/index.html"
   },
   "repository": {
     "type": "git",
