--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/plugin-transform-react-jsx": "^7.8.3",
+    "node-notifier": "^8.0.0",
     "parcel-bundler": "^1.12.4",
     "rollup": "^1.31.1"
   }
