--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "node-notifier": "^8.0.0",
     "parcel-bundler": "^1.12.4",
     "rollup": "^1.31.1"
+  },
+  "dependencies": {
+    "immer": "^8.0.0"
   }
 }
